--- a/app/views/commits/_commit.html.erb
+++ b/app/views/commits/_commit.html.erb
@@ -1,5 +1,5 @@
 <li class="commit" id="commit-<%= commit.id %>">
-  <%= render commit.last_statuses %>
+  <%= render_status(commit) %>
   <div class="event">
     <span class="event-meta">
       <%= render_github_user(commit.author) %>
